--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -28,15 +28,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.EmployeeID)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.EmployeeName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.EmployeeID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EmployeeID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EmployeeID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.EmployeeID">Sửa</a> |
+                <a asp-action="Details" asp-route-id="@item.EmployeeID">Chi tiết</a> |
+                <a asp-action="Delete" asp-route-id="@item.EmployeeID">Xóa</a>
             </td>
         </tr>
 }
