--- a/Views/Person/Index.cshtml
+++ b/Views/Person/Index.cshtml
@@ -26,12 +26,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.PersonID)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.PersonName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.PersonID">Sửa</a> |
+                <a asp-action="Details" asp-route-id="@item.PersonID">Chi Tiết</a> |
+                <a asp-action="Delete" asp-route-id="@item.PersonID">Xóa</a>
             </td>
         </tr>
 }
