--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -28,15 +28,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.StudentID)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.StudentName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.StudentID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.StudentID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.StudentID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.StudentID">Sửa</a> |
+                <a asp-action="Details" asp-route-id="@item.StudentID">Chi tiết</a> |
+                <a asp-action="Delete" asp-route-id="@item.StudentID">Xóa</a>
             </td>
         </tr>
 }
